--- a/frontend/index.html
+++ b/frontend/index.html
@@ -170,29 +170,6 @@
                   <span class="text-primary">May 2018 - November 2019</span>
                 </div>
               </div>
-              <!-- Commented out the extra!
-            <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-              <div class="resume-content">
-                <h3 class="mb-0">Junior Web Designer</h3>
-                <div class="subheading mb-3">Shout! Media Productions</div>
-                <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
-              </div>
-              <div class="resume-date text-md-right">
-                <span class="text-primary">July 2010 - December 2011</span>
-              </div>
-            </div>
-    
-            <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-              <div class="resume-content">
-                <h3 class="mb-0">Web Design Intern</h3>
-                <div class="subheading mb-3">Shout! Media Productions</div>
-                <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-              </div>
-              <div class="resume-date text-md-right">
-                <span class="text-primary">September 2008 - June 2010</span>
-              </div>
-            </div>
-          -->
             </div>
           </section>
     
@@ -400,6 +377,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Cloud Resume/Portfolio Project</h3>
             <div class="subheading mb-3">HTML, CSS, Python, Node.js, S3, CloudFront, Route53, Terraform, DynamoDB</div>
+            <div class="subheading mb-3"> <a href="https://github.com/HumdaanA/Cloud-Portfolio-Project.git">Github REPO</a></div>
             <ul>
               <li>
                 Designed and deployed a serverless personal resume website using AWS S3, CloudFront, and Route 53, ensuring high availability and low latency.
