--- a/frontend/index.html
+++ b/frontend/index.html
@@ -95,7 +95,7 @@
                 trying to make my way in the world of Computer Science.
               </p>
               <div class="social-icons">
-                <a class="social-icon" href="https://www.linkedin.com/in/humdaan-ahmad"><i class="fab fa-linkedin-in"></i></a>
+                <a class="social-icon" href="https://www.linkedin.com/in/ahumdaan"><i class="fab fa-linkedin-in"></i></a>
                 <a class="social-icon" href="https://github.com/HumdaanA"><i class="fab fa-github"></i></a>
             </div>
             <div
