--- a/frontend/index.html
+++ b/frontend/index.html
@@ -126,19 +126,26 @@
                 class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5"
               >
                 <div class="resume-content">
-                  <h3 class="mb-0">Data Analyst/Cloud Engineer Intern</h3>
+                  <h3 class="mb-0">Cloud Engineer/Data Analyst Intern</h3>
                   <div class="subheading mb-3">CVS Health</div>
                   <ul>
                     <li>
-                      Help Cloud Development team configure Azure VMs and Azure Blob Storage for data analysis
+                      Implemented and optimized AWS Connect to enhance customer interaction workflows, configuring routing profiles and contact flows to improve efficiency and user experience.
                     </li>
-                    <li>Work with co-workers on Tableau projects for managing data used by the ETS-AS team.</li>
                     <li>
-                     Become a temporary scrum master to help run meetings and make sure meetings go smoothly.
+                      Assisted the Cloud Development team in configuring Azure Virtual Machines (VMs) and Azure Blob Storage to support data analysis workflows.
                     </li>
-                    <li>Use Power App to help develop REST API for information of apps and services in one place</li>
                     <li>
-                      Configure S3 buckets to hold data and utilize AWS Athena to analyze data in buckets
+                     Automated infrastructure deployment in AWS and Azure using Terraform, improving efficiency and consistency.
+                    </li>
+                    <li>
+                      Served as a temporary Scrum Master, facilitating agile meetings and ensuring efficient team coordination.
+                    </li>
+                    <li>
+                      Developed a REST API using Power Apps, centralizing information on applications and services.
+                    </li>
+                    <li>
+                      Configured AWS S3 buckets to store data and leveraged AWS Athena for efficient data querying and analysis.
                     </li>
                   </ul>
                 </div>
