--- a/frontend/index.html
+++ b/frontend/index.html
@@ -286,6 +286,32 @@
         >
           <div class="w-100">
             <h2 class="mb-5"><i class="fas fa-pen"></i> Projects</h2>
+
+             <div
+              class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5"
+            >
+              <div class="resume-content">
+                <h3 class="mb-0">Kubernetes Microservices Deployment w/ AWS EKS</h3>
+                <div class="subheading mb-3">AWS EKS, Docker, Terraform, React.js, Flask, JWT, FastAPI</div>
+                <div class="subheading mb-3"> <a href="https://github.com/HumdaanA/Kubernetes-Microservices-Deployment-w-AWS-EKS.git">Github REPO</a></div>
+                <ul>
+                  <li>
+                    Designed and deployed a scalable microservices architecture on AWS EKS using Terraform for infrastructure automation.
+                  </li>
+                  <li>Implemented JWT authentication for secure communication between a FastAPI authentication service, backend service, and React frontend.</li>
+                  <li>
+                    Containerized all services using Docker, and orchestrated deployment with Kubernetes for high availability and scalability.
+                  </li>
+                  <li>Configured AWS Load Balancer and Ingress for traffic management, ensuring secure access to protected backend services.</li>
+                  <li>
+                    Established a CI/CD pipeline using GitHub Actions for seamless code deployment and container image management on AWS ECR.
+                  </li>
+                  <li>
+                    Utilized AWS IAM for secure access control, following best practices for Kubernetes role-based access control (RBAC).
+                  </li>
+                </ul>
+              </div>
+            </div>
             
             <div
               class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5"
