--- a/frontend/index.html
+++ b/frontend/index.html
@@ -296,18 +296,18 @@
                 <div class="subheading mb-3"> <a href="https://github.com/HumdaanA/Kubernetes-Microservices-Deployment-w-AWS-EKS.git">Github REPO</a></div>
                 <ul>
                   <li>
-                    Designed and deployed a scalable microservices architecture on AWS EKS using Terraform for infrastructure automation.
+                    Designed and deployed a scalable microservices architecture on <b>AWS EKS</b> using <b>Terraform</b> for infrastructure automation.
                   </li>
-                  <li>Implemented JWT authentication for secure communication between a FastAPI authentication service, backend service, and React frontend.</li>
+                  <li>Implemented <b>JWT authentication</b> for secure communication between a <b>FastAPI</b> authentication service, backend service, and <b>React</b> frontend.</li>
                   <li>
-                    Containerized all services using Docker, and orchestrated deployment with Kubernetes for high availability and scalability.
+                    Containerized all services using <b>Docker</b>, and orchestrated deployment with <b>Kubernetes</b> for high availability and scalability.
                   </li>
-                  <li>Configured AWS Load Balancer and Ingress for traffic management, ensuring secure access to protected backend services.</li>
+                  <li>Configured <b>AWS Load Balancer</b> and Ingress for traffic management, ensuring secure access to protected backend services.</li>
                   <li>
-                    Established a CI/CD pipeline using GitHub Actions for seamless code deployment and container image management on AWS ECR.
+                    Established a <b>CI/CD pipeline</b> using GitHub Actions for seamless code deployment and container image management on <b>AWS ECR</b>.
                   </li>
                   <li>
-                    Utilized AWS IAM for secure access control, following best practices for Kubernetes role-based access control (RBAC).
+                    Utilized <b>AWS IAM</b> for secure access control, following best practices for Kubernetes role-based access control (RBAC).
                   </li>
                 </ul>
               </div>
