--- a/frontend/index.html
+++ b/frontend/index.html
@@ -322,13 +322,13 @@
                 <div class="subheading mb-3"> <a href="https://github.com/HumdaanA/Multi-Agent-AI-Fitness-Assistant-RAG-Architecture.git">Github REPO</a></div>
                 <ul>
                   <li>
-                    Developed a Multi-Agent AI Fitness Assistant using Python, LangFlow, and OpenAI GPT-4o Mini API to provide personalized fitness and nutrition recommendations.
+                    Developed a Multi-Agent AI Fitness Assistant using <b>Python</b>, <b>LangFlow</b>, and <b>OpenAI GPT-4o Mini API</b> to provide personalized fitness and nutrition recommendations.
                   </li>
-                  <li>Designed and implemented AI-powered agents for fitness assistance and macro-nutrient planning, leveraging LangFlow's workflow automation.</li>
+                  <li>Designed and implemented AI-powered agents for fitness assistance and macro-nutrient planning, leveraging <b>LangFlow's workflow automation</b>.</li>
                   <li>
-                    Integrated AstraDB Vector Database to store and retrieve user profiles and fitness notes, enabling context-aware AI responses.
+                    Integrated <b>AstraDB Vector Database</b> to store and retrieve user profiles and fitness notes, enabling context-aware AI responses.
                   </li>
-                  <li>Built an interactive front-end using Streamlit, allowing users to set goals, track fitness progress, and receive AI-driven insights.</li>
+                  <li>Built an interactive front-end using <b>Streamlit</b>, allowing users to set goals, track fitness progress, and receive AI-driven insights.</li>
                   <li>
                     Implemented API-driven backend architecture, extracting and integrating API calls from LangFlow, OpenAI, and AstraDB for seamless data processing.
                   </li>
@@ -349,19 +349,19 @@
                 <div class="subheading mb-3"> <a href="https://github.com/HumdaanA/EventBookingRESTAPI.git">Github REPO</a></div>
                 <ul>
                   <li>
-                    Developed a scalable REST API in GoLang for event booking, enabling user registration, event management, and secure authentication.                  
+                    Developed a scalable <b>REST API</b> in <b>GoLang</b> for event booking, enabling user registration, event management, and secure authentication.                  
                   </li>
                   <li>
-                    Implemented JWT-based authentication to protect sensitive API endpoints, ensuring secure user access and event ownership validation.
+                    Implemented <b>JWT-based authentication</b> to protect sensitive <b>API endpoints</b>, ensuring secure user access and event ownership validation.
                   </li>
   
-                  <li>Built event management features with CRUD operations using the Gin framework, enforcing role-based access control for event modifications.
+                  <li>Built event management features with <b>CRUD operations</b> using the <b>Gin framework</b>, enforcing role-based access control for event modifications.
                   </li>
                   <li>
-                    Designed and integrated a SQLite database with Go-SQLite3 for persistent storage, handling event and user data efficiently.
+                    Designed and integrated a <b>SQLite</b> database with <b>Go-SQLite3</b> for persistent storage, handling event and user data efficiently.
                   </li>
                   <li>
-                    Enhanced security with bcrypt password hashing, preventing plain-text password storage and ensuring secure user authentication.
+                    Enhanced security with <b>bcrypt</b> password hashing, preventing plain-text password storage and ensuring secure user authentication.
                   </li>
                   <li>
                     Structured the project for maintainability, organizing routes, authentication middleware, and database handling in modular components.
@@ -379,26 +379,26 @@
               <div class="subheading mb-3"> <a href="https://github.com/HumdaanA/Discord-Bot-Minecraft-Server.git">Github REPO</a></div>
               <ul>
                 <li>
-                  Designed and deployed an automated Minecraft server management system using AWS EC2, Lambda, and API Gateway, enabling remote control via a Discord bot.
+                  Designed and deployed an automated Minecraft server management system using <b>AWS EC2</b>, <b>Lambda</b>, and <b>API Gateway</b>, enabling remote control via a Discord bot.
                 </li>
                 <li>
-                  Developed a Discord bot in Python to handle /start and /stop commands, integrating with AWS services for seamless server control.
-                </li>
-
-                <li>
-                  Implemented AWS Lambda functions to start and stop EC2 instances dynamically, optimizing server uptime and cost efficiency.
+                  Developed a Discord bot in <b>Python</b> to handle <b>/start</b> and <b>/stop</b> commands, integrating with AWS services for seamless server control.
                 </li>
 
                 <li>
-                  Provisioned and managed cloud infrastructure using Terraform, ensuring reproducibility and scalability of AWS resources.
+                  Implemented <b>AWS Lambda</b> functions to start and stop EC2 instances dynamically, optimizing server uptime and cost efficiency.
                 </li>
 
                 <li>
-                  Configured a persistent Discord bot on an EC2 instance, utilizing a systemd service for continuous uptime and reliability.
+                  Provisioned and managed cloud infrastructure using <b>Terraform</b>, ensuring reproducibility and scalability of AWS resources.
                 </li>
 
                 <li>
-                  Established a secure API endpoint via AWS API Gateway, allowing authenticated interactions between the Discord bot and AWS Lambda.
+                  Configured a persistent <b>Discord bot</b> on an EC2 instance, utilizing a systemd service for continuous uptime and reliability.
+                </li>
+
+                <li>
+                  Established a secure API endpoint via <b>AWS API Gateway</b>, allowing authenticated interactions between the Discord bot and AWS Lambda.
                 </li>
               </ul>
             </div>
@@ -413,22 +413,22 @@
             <div class="subheading mb-3"> <a href="https://github.com/HumdaanA/Cloud-Portfolio-Project.git">Github REPO</a></div>
             <ul>
               <li>
-                Designed and deployed a serverless personal resume website using AWS S3, CloudFront, and Route 53, ensuring high availability and low latency.
+                Designed and deployed a serverless personal resume website using <b>AWS S3</b>, <b>CloudFront</b>, and <b>Route 53</b>, ensuring high availability and low latency.
               </li>
               <li>
-                Implemented Infrastructure as Code (IaC) with Terraform, automating the provisioning of AWS resources including S3, DynamoDB, API Gateway, and Lambda.
+                Implemented <b>Infrastructure as Code (IaC)</b> with <b>Terraform</b>, automating the provisioning of AWS resources including S3, DynamoDB, API Gateway, and Lambda.
               </li>
 
-              <li>Developed a Python-based AWS Lambda function to track and update visitor counts, integrating with DynamoDB for persistent storage.
+              <li>Developed a <b>Python-based AWS Lambda function</b> to track and update visitor counts, integrating with <b>DynamoDB</b> for persistent storage.
               </li>
               <li>
-                Created a RESTful API with AWS API Gateway, enabling dynamic interactions between the frontend and backend services.
+                Created a <b>RESTful API</b> with <b>AWS API Gateway</b>, enabling dynamic interactions between the frontend and backend services.
               </li>
               <li>
-                Established a CI/CD pipeline with GitHub Actions, automating Terraform deployments and frontend updates to AWS.
+                Established a <b>CI/CD pipeline</b> with <b>GitHub Actions</b>, automating Terraform deployments and frontend updates to AWS.
               </li>
               <li>
-                Enforced AWS security best practices, implementing IAM roles, least privilege policies, and CloudWatch monitoring for enhanced security and observability.
+                Enforced AWS security best practices, implementing <b>IAM roles</b>, least privilege policies, and <b>CloudWatch</b> monitoring for enhanced security and observability.
               </li>
             </ul>
           </div>
