--- a/frontend/index.html
+++ b/frontend/index.html
@@ -130,13 +130,13 @@
                   <div class="subheading mb-3">CVS Health</div>
                   <ul>
                     <li>
-                      Implemented and optimized AWS Connect to enhance customer interaction workflows, configuring routing profiles and contact flows to improve efficiency and user experience.
+                      Automated AWS infrastructure using Terraform, managing IAM, S3, and Autoscaling Groups to streamline deployments.
                     </li>
                     <li>
                       Assisted the Cloud Development team in configuring Azure Virtual Machines (VMs) and Azure Blob Storage to support data analysis workflows.
                     </li>
                     <li>
-                     Automated infrastructure deployment in AWS and Azure using Terraform, improving efficiency and consistency.
+                     Implemented CI/CD pipelines with GitHub Actions to accelerate code delivery.
                     </li>
                     <li>
                       Served as a temporary Scrum Master, facilitating agile meetings and ensuring efficient team coordination.
