--- a/frontend/index.html
+++ b/frontend/index.html
@@ -284,8 +284,34 @@
           class="resume-section p-3 p-lg-5 d-flex justify-content-center"
           id="projects"
         >
-          <div class="w-100">
+                    <div class="w-100">
             <h2 class="mb-5"><i class="fas fa-pen"></i> Projects</h2>
+
+            <div
+              class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5"
+            >
+              <div class="resume-content">
+                <h3 class="mb-0">Cloud Waste Optimization-as-a-Service [CLI Tool]</h3>
+                <div class="subheading mb-3">AWS EKS, Docker, Terraform, React.js, Flask, JWT, FastAPI</div>
+                <div class="subheading mb-3"> <a href="https://github.com/HumdaanA/Cloud-Waste-Optimization-as-a-Service.git">Github REPO</a></div>
+                <ul>
+                  <li>
+                    <b>Led a 3-developer team</b> to build a Python CLI tool that reduced AWS costs by <b>30-40%</b> through automated resource optimization.
+                  </li>
+                  <li>Scanned 5 AWS services <b>(EC2, RDS, S3, Lambda, EBS)</b> using <b>boto3</b> and <b>CloudWatch</b>, identifying <b>$50-500</b> monthly savings per finding.</li>
+                  <li>
+                    Deployed infrastructure using <b>Terraform IaC</b> with <b>DynamoDB</b>, <b>S3</b>, and <b>Lambda</b>, ensuring encrypted storage and least-privilege <b></b>IAM</b>.
+                  </li>
+                  <li>Built a <b>rule-based analysis engine</b> categorizing findings by severity (CRITICAL/HIGH/MEDIUM/LOW) with <b>95% accuracy</b> in waste detection.</li>
+                  <li>
+                    <b>Parsed</b> Terraform files from GitHub using <b>python-hcl2</b> to identify misconfigurations before production deployment.
+                  </li>
+                  <li>
+                    Processed <b>100+ resources</b> per scan in under 60 seconds with DynamoDB persistence and CloudWatch monitoring
+                  </li>
+                </ul>
+              </div>
+            </div>
 
              <div
               class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5"
@@ -312,6 +338,36 @@
                 </ul>
               </div>
             </div>
+
+            <div
+          class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5"
+        >
+          <div class="resume-content">
+            <h3 class="mb-0">Cloud Resume/Portfolio Project</h3>
+            <div class="subheading mb-3">HTML, CSS, Python, Node.js, S3, CloudFront, Route53, Terraform, DynamoDB</div>
+            <div class="subheading mb-3"> <a href="https://github.com/HumdaanA/Cloud-Portfolio-Project.git">Github REPO</a></div>
+            <ul>
+              <li>
+                Designed and deployed a serverless personal resume website using <b>AWS S3</b>, <b>CloudFront</b>, and <b>Route 53</b>, ensuring high availability and low latency.
+              </li>
+              <li>
+                Implemented <b>Infrastructure as Code (IaC)</b> with <b>Terraform</b>, automating the provisioning of AWS resources including S3, DynamoDB, API Gateway, and Lambda.
+              </li>
+
+              <li>Developed a <b>Python-based AWS Lambda function</b> to track and update visitor counts, integrating with <b>DynamoDB</b> for persistent storage.
+              </li>
+              <li>
+                Created a <b>RESTful API</b> with <b>AWS API Gateway</b>, enabling dynamic interactions between the frontend and backend services.
+              </li>
+              <li>
+                Established a <b>CI/CD pipeline</b> with <b>GitHub Actions</b>, automating Terraform deployments and frontend updates to AWS.
+              </li>
+              <li>
+                Enforced AWS security best practices, implementing <b>IAM roles</b>, least privilege policies, and <b>CloudWatch</b> monitoring for enhanced security and observability.
+              </li>
+            </ul>
+          </div>
+        </div>
             
             <div
               class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5"
@@ -403,36 +459,6 @@
               </ul>
             </div>
           </div>
-  
-          <div
-          class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5"
-        >
-          <div class="resume-content">
-            <h3 class="mb-0">Cloud Resume/Portfolio Project</h3>
-            <div class="subheading mb-3">HTML, CSS, Python, Node.js, S3, CloudFront, Route53, Terraform, DynamoDB</div>
-            <div class="subheading mb-3"> <a href="https://github.com/HumdaanA/Cloud-Portfolio-Project.git">Github REPO</a></div>
-            <ul>
-              <li>
-                Designed and deployed a serverless personal resume website using <b>AWS S3</b>, <b>CloudFront</b>, and <b>Route 53</b>, ensuring high availability and low latency.
-              </li>
-              <li>
-                Implemented <b>Infrastructure as Code (IaC)</b> with <b>Terraform</b>, automating the provisioning of AWS resources including S3, DynamoDB, API Gateway, and Lambda.
-              </li>
-
-              <li>Developed a <b>Python-based AWS Lambda function</b> to track and update visitor counts, integrating with <b>DynamoDB</b> for persistent storage.
-              </li>
-              <li>
-                Created a <b>RESTful API</b> with <b>AWS API Gateway</b>, enabling dynamic interactions between the frontend and backend services.
-              </li>
-              <li>
-                Established a <b>CI/CD pipeline</b> with <b>GitHub Actions</b>, automating Terraform deployments and frontend updates to AWS.
-              </li>
-              <li>
-                Enforced AWS security best practices, implementing <b>IAM roles</b>, least privilege policies, and <b>CloudWatch</b> monitoring for enhanced security and observability.
-              </li>
-            </ul>
-          </div>
-        </div>
         
           </div>
         </section>
