--- a/frontend/index.html
+++ b/frontend/index.html
@@ -292,7 +292,7 @@
             >
               <div class="resume-content">
                 <h3 class="mb-0">Cloud Waste Optimization-as-a-Service [CLI Tool]</h3>
-                <div class="subheading mb-3">AWS EKS, Docker, Terraform, React.js, Flask, JWT, FastAPI</div>
+                <div class="subheading mb-3">Python, AWS (EC2, RDS, S3, Lambda, DynamoDB), Terraform, CloudWatch, boto3 SDK, GitHub API</div>
                 <div class="subheading mb-3"> <a href="https://github.com/HumdaanA/Cloud-Waste-Optimization-as-a-Service.git">Github REPO</a></div>
                 <ul>
                   <li>
